{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 967,
  "lineage": "19eb4ba9-e6af-0f9f-15ff-7be7c1c37ae5",
  "resources": [
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "inventory_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/inventory-lb/bc356a4c7c43e17c",
            "arn_suffix": "app/inventory-lb/bc356a4c7c43e17c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "inventory-lb-331531151.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/inventory-lb/bc356a4c7c43e17c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "inventory-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-003615458c6d717d4"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b228db33afa44cfd"
              },
              {
                "subnet_id": "subnet-0f99699eb564ab942"
              }
            ],
            "subnets": [
              "subnet-0b228db33afa44cfd",
              "subnet-0f99699eb564ab942"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_inventory_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "inventory_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/inventory-lb/bc356a4c7c43e17c/d39913eb7f7c6ab7",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/inventory-tg/5c38d74a382c7722",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/inventory-lb/bc356a4c7c43e17c/d39913eb7f7c6ab7",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/inventory-lb/bc356a4c7c43e17c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_inventory_service.aws_lb.inventory_lb",
            "module.ecs_inventory_service.aws_lb_target_group.inventory_tg",
            "module.ecs_inventory_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "inventory_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/inventory-tg/5c38d74a382c7722",
            "arn_suffix": "targetgroup/inventory-tg/5c38d74a382c7722",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 90,
                "matcher": "200-299",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/inventory-tg/5c38d74a382c7722",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/inventory-lb/bc356a4c7c43e17c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "inventory-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg_inventory",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-01388e7cc0b193add",
            "description": "Security group for ECS tasks that allows outbound HTTPS (443) traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS traffic on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-01388e7cc0b193add",
            "ingress": [],
            "name": "ecs-task-sg_inventory",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_inventory_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-003615458c6d717d4",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-003615458c6d717d4",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "inventory-lb-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "order_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/order-lb/89dc16700cc59a26",
            "arn_suffix": "app/order-lb/89dc16700cc59a26",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "order-lb-183440596.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/order-lb/89dc16700cc59a26",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "order-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0afe583426bbc7437"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b228db33afa44cfd"
              },
              {
                "subnet_id": "subnet-0f99699eb564ab942"
              }
            ],
            "subnets": [
              "subnet-0b228db33afa44cfd",
              "subnet-0f99699eb564ab942"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_order_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "order_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/order-lb/89dc16700cc59a26/1244219744eeb8df",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/order-tg/6efad76cd3be04c9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/order-lb/89dc16700cc59a26/1244219744eeb8df",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/order-lb/89dc16700cc59a26",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_order_service.aws_lb.order_lb",
            "module.ecs_order_service.aws_lb_target_group.order_tg",
            "module.ecs_order_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "order_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/order-tg/6efad76cd3be04c9",
            "arn_suffix": "targetgroup/order-tg/6efad76cd3be04c9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 90,
                "matcher": "200-299",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/order-tg/6efad76cd3be04c9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/order-lb/89dc16700cc59a26"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "order-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-0efa65cef729bc057",
            "description": "Security group for ECS tasks that allows outbound HTTPS (443) traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS traffic on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0efa65cef729bc057",
            "ingress": [],
            "name": "ecs-task-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_order_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-0afe583426bbc7437",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0afe583426bbc7437",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "order-lb-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_payment_service",
      "mode": "managed",
      "type": "aws_lb",
      "name": "payment_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/payment-lb/bbf4afa7d2e41a1c",
            "arn_suffix": "app/payment-lb/bbf4afa7d2e41a1c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "payment-lb-1397299249.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/payment-lb/bbf4afa7d2e41a1c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "payment-lb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-08c6216a04816cdc6"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b228db33afa44cfd"
              },
              {
                "subnet_id": "subnet-0f99699eb564ab942"
              }
            ],
            "subnets": [
              "subnet-0b228db33afa44cfd",
              "subnet-0f99699eb564ab942"
            ],
            "tags": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "module.ecs_payment_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_payment_service",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "payment_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/payment-lb/bbf4afa7d2e41a1c/4d4faf634628cf4b",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/payment-tg/7906030134d6bf31",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:listener/app/payment-lb/bbf4afa7d2e41a1c/4d4faf634628cf4b",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/payment-lb/bbf4afa7d2e41a1c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.ecs_payment_service.aws_lb.payment_lb",
            "module.ecs_payment_service.aws_lb_target_group.payment_tg",
            "module.ecs_payment_service.aws_security_group.lb_sg",
            "module.network.aws_subnet.private",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_payment_service",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "payment_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/payment-tg/7906030134d6bf31",
            "arn_suffix": "targetgroup/payment-tg/7906030134d6bf31",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 90,
                "matcher": "200-299",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:294417223953:targetgroup/payment-tg/7906030134d6bf31",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:294417223953:loadbalancer/app/payment-lb/bbf4afa7d2e41a1c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "payment-tg",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_payment_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_task_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-0847ee088195a7de9",
            "description": "Security group for ECS tasks that allows outbound HTTPS (443) traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound HTTPS traffic on port 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0847ee088195a7de9",
            "ingress": [],
            "name": "ecs-task-sg_payment",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.ecs_payment_service",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-08c6216a04816cdc6",
            "description": "Security group for the Application Load Balancer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08c6216a04816cdc6",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow HTTP from anywhere",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "payment-lb-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "payment-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:internet-gateway/igw-0663e38d1073475e6",
            "id": "igw-0663e38d1073475e6",
            "owner_id": "294417223953",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0de6afff8c4533ddb",
            "association_id": "eipassoc-07cc88749a6c28345",
            "connectivity_type": "public",
            "id": "nat-05be6c4bfa0fa05fa",
            "network_interface_id": "eni-0c35d99ba5ed630e9",
            "private_ip": "172.1.1.144",
            "public_ip": "100.26.115.242",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0f47e51d46e4f5257",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            }
          },
          "dependencies": [
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:route-table/rtb-013330f80b4170d53",
            "id": "rtb-013330f80b4170d53",
            "owner_id": "294417223953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05be6c4bfa0fa05fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:route-table/rtb-092456fc9ffde71c0",
            "id": "rtb-092456fc9ffde71c0",
            "owner_id": "294417223953",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0663e38d1073475e6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07237417a6a95fe57",
            "route_table_id": "rtb-013330f80b4170d53",
            "subnet_id": "subnet-0b228db33afa44cfd"
          },
          "dependencies": [
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02df85f09fd009f5e",
            "route_table_id": "rtb-013330f80b4170d53",
            "subnet_id": "subnet-0f99699eb564ab942"
          },
          "dependencies": [
            "module.network.aws_nat_gateway.nat",
            "module.network.aws_route_table.private_rt",
            "module.network.aws_subnet.private",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d8f99c3bbcb1e68",
            "route_table_id": "rtb-092456fc9ffde71c0",
            "subnet_id": "subnet-0f47e51d46e4f5257"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08021f0166d8f886e",
            "route_table_id": "rtb-092456fc9ffde71c0",
            "subnet_id": "subnet-07d165f988a1201ac"
          },
          "dependencies": [
            "module.network.aws_internet_gateway.this",
            "module.network.aws_route_table.public",
            "module.network.aws_subnet.public",
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "fargate_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-0c7e734ce95d099c7",
            "description": "Allow fargate inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7e734ce95d099c7",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.1.0.0/16"
                ],
                "description": "Allow PostgreSQL access from trusted CIDRs",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "fargate-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "postgresql-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-0ea05fbb1ebf3e85f",
            "description": "Allow PostgreSQL inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ea05fbb1ebf3e85f",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.1.0.0/16"
                ],
                "description": "Allow PostgreSQL access from trusted CIDRs",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "postgresql-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:security-group/sg-0d89b28239718e925",
            "description": "Security group for VPC endpoints (ECR, etc.)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d89b28239718e925",
            "ingress": [
              {
                "cidr_blocks": [
                  "172.1.0.0/16"
                ],
                "description": "Allow inbound HTTPS traffic from ECS tasks",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoint-sg",
            "name_prefix": "",
            "owner_id": "294417223953",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "timeouts": null,
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.network.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-0b228db33afa44cfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.1.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b228db33afa44cfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-0f99699eb564ab942",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.1.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f99699eb564ab942",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-0f47e51d46e4f5257",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az3",
            "cidr_block": "172.1.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f47e51d46e4f5257",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:subnet/subnet-07d165f988a1201ac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.1.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07d165f988a1201ac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "294417223953",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "vpc_id": "vpc-04fc181683be6ff92"
          },
          "dependencies": [
            "module.network.aws_vpc.this",
            "module.network.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:294417223953:vpc/vpc-04fc181683be6ff92",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.1.0.0/16",
            "default_network_acl_id": "acl-02c370b6ae626619c",
            "default_route_table_id": "rtb-01feb007284b5e427",
            "default_security_group_id": "sg-0625f453eb6f434f7",
            "dhcp_options_id": "dopt-f982999b",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-04fc181683be6ff92",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-01feb007284b5e427",
            "owner_id": "294417223953",
            "tags": {
              "Environment": "dev",
              "Project": "order-system"
            },
            "tags_all": {
              "Environment": "dev",
              "Project": "order-system"
            }
          }
        }
      ]
    }
  ]
}